# lxqt-about

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md  lxqt-about.ts  lxqt-about_ar.ts  lxqt-about_ca.ts  lxqt-about_cs.ts  lxqt-about_da.ts  lxqt-about_da_DK.ts  lxqt-about_de.ts  lxqt-about_el.ts  lxqt-about_eo.ts  lxqt-about_es.ts  lxqt-about_es_VE.ts  lxqt-about_eu.ts  lxqt-about_fi.ts  lxqt-about_fr.ts  lxqt-about_hu.ts  lxqt-about_ia.ts  lxqt-about_id.ts  lxqt-about_id_ID.ts  lxqt-about_it.ts  lxqt-about_it_IT.ts  lxqt-about_ja.ts  lxqt-about_ko.ts  lxqt-about_lt.ts  lxqt-about_nl.ts  lxqt-about_pl_PL.ts  lxqt-about_pt.ts  lxqt-about_pt_BR.ts  lxqt-about_ru.ts  lxqt-about_sr@latin.ts  lxqt-about_sr_RS.ts  lxqt-about_th_TH.ts  lxqt-about_tr.ts  lxqt-about_uk.ts  lxqt-about_zh_CN.ts  lxqt-about_zh_TW.ts  (+1 more)
.github/workflows/: create_translators_pr.yml
.tx/: config  updateSrc.sh
aboutdialog/: lxqtaboutdialog.cpp  lxqtaboutdialog.h  lxqtaboutdialog_p.h  technicalinfo.cpp  technicalinfo.h
resources/: lxqt-about.desktop.in
src/: CMakeLists.txt
translations/: CMakeLists.txt  lxqt-about.desktop.yaml  lxqt-about.ts  lxqt-about_ar.desktop.yaml  lxqt-about_ar.ts  lxqt-about_arn.ts  lxqt-about_ast.ts  lxqt-about_bg.desktop.yaml  lxqt-about_bg.ts  lxqt-about_ca.desktop.yaml  lxqt-about_ca.ts  lxqt-about_cs.desktop.yaml  lxqt-about_cs.ts  lxqt-about_cs_CZ.ts  lxqt-about_cy.ts  lxqt-about_da.desktop.yaml  lxqt-about_da.ts  lxqt-about_da_DK.ts  lxqt-about_de.desktop  lxqt-about_de.desktop.yaml  lxqt-about_de.ts  lxqt-about_el.desktop.yaml  lxqt-about_el.ts  lxqt-about_el_GR.ts  lxqt-about_en_GB.ts  lxqt-about_eo.ts  lxqt-about_es.desktop.yaml  lxqt-about_es.ts  lxqt-about_es_VE.ts  lxqt-about_et.desktop.yaml  lxqt-about_et.ts  lxqt-about_eu.ts  lxqt-about_fa.ts  lxqt-about_fi.desktop.yaml  lxqt-about_fi.ts  lxqt-about_fil.ts  lxqt-about_fr.desktop.yaml  lxqt-about_fr.ts  lxqt-about_fr_FR.ts  lxqt-about_fur.desktop.yaml  (+82 more)
translators/: .mailmap  clean_list.sh  copy_info.sh  developers.list  mailmap2019  mailmap_manual  make_all.sh  make_list_clone.sh  make_list_gitlog.sh  make_list_info.sh  make_list_mailmap.sh
translatorsinfo/: CMakeLists.txt  translators_ar.info  translators_cs.info  translators_et.info  translators_fi.info  translators_fr.info  translators_it.info  translators_ko.info  translators_lg.info  translators_lt.info  translators_lv.info  translators_nb_NO.info  translators_nl.info  translators_pt.info  translators_ro.info  translators_ru.info  translators_tr.info  translators_uk.info  translatorsinfo.cpp  translatorsinfo.h
